# mcp-chess

./: CLAUDE.md  DIFFICULTY_SELECTOR_PLAN.md  QUICKSTART.md  README.md  chess_mcp.py  pyproject.toml  test_chess_mcp.py  test_difficulty.py  verify_very_easy.py
