[project]
name = "chess-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for playing chess against an AI opponent"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "python-chess>=1.10.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
